--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=SpringBoot_Pharmassist
+spring.datasource.url= jdbc:mysql://localhost:3306/Pharmassist?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Mkbc@1964
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+server.port=7000
+
+
